# RICA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  repomix-output.xml  xmake.lua
game/: .gitignore  CMakeLists.txt  camera_controller.hpp  initEngine.json  logRica.txt  main.cpp  player.hpp  raymarching.fs  xmake.lua
lib/rlImGui/: rlImGui.cpp
src/: CMakeLists.txt  rica.hpp  xmake.lua
src/Audio/: Audio.cpp  Audio.hpp
src/Collider/Collider2D/: Collider2D.cpp  Collider2D.hpp
src/ECS/Components/: Component.hpp
src/ECS/Components/Audio/: Audio.hpp
src/ECS/Components/Camera/Camera2D/: Camera2D.hpp
src/ECS/Components/Camera/Camera3D/: Camera3D.hpp
src/ECS/Components/Collider/Collider2D/: Collider2D.cpp  Collider2D.hpp
src/ECS/Components/Collider2D/: Collider2D.hpp
src/ECS/Components/Mesh/: Mesh.hpp
src/ECS/Components/Physic/Physic2D/: Physic2D.hpp
src/ECS/Components/Physic/Physic3D/: Physic3D.hpp
src/ECS/Components/Sprite/: Sprite.cpp  Sprite.hpp
src/ECS/Components/Transform/: Transform.hpp
src/ECS/Components/Transform/Transform2D/: Transform.hpp
src/ECS/Components/Transform/Transform3D/: Transform3D.hpp
src/ECS/Objects/: Entity.cpp  Entity.hpp  Entity.inl
src/ECS/Systems/: System.hpp
src/Input/: Input.cpp  Input.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Physic/Physic2D/: Physic.hpp
src/Physic/Physic3D/: Physic.cpp  Physic.hpp
src/Scene/: Scene.cpp  Scene.hpp  Scene.inl
src/UI/: UI.hpp
src/Var/: Var.cpp  Var.hpp
src/editor/editor/: editor.cpp  editor.hpp
src/editor/panel/: panel.hpp
src/editor/panel/allPanels/terminal/: terminal.cpp  terminal.hpp
src/editor/panel/allPanels/viewport/: viewport.cpp  viewport.hpp
src/engine/: Engine.cpp  Engine.hpp  Engine.inl  Shader.cpp  Shader.hpp
src/graphics/: Render.cpp  Render.hpp  Terminal.cpp  Terminal.hpp
src/graphics/Render2D/: Render2D.cpp  Render2D.hpp
src/graphics/Render3D/: Render3D.cpp  Render3D.hpp
